abstract swagger router
