# routes/index.js
@@ -1,13 +1,7 @@
 const router = require("express").Router();
-const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("../swagger.json");
 
 router.get("/", (req, res) => res.send("hello world"));
 
 router.use("/contacts", require("./contacts"));
-
-// SWAGGER
-router.use("/api-docs", swaggerUi.serve);
-router.get("/api-docs", swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
